syntax = "proto3";

package xcpb;

message Header {
  string Sender = 1;
  map<string, bytes> Recipients = 2;
}

message Chunk {
    bytes Body = 1;
}

message Message {
  uint32 Version = 1;
  Header Header = 2;
  repeated Chunk Chunks = 3;
  bool Compressed = 4;
}

enum PublicKeyAlgorithm {
  UNKNOWN = 0;
  NACL = 1;
}

message Identity {
  string Name = 1;
  string Comment = 2;
  string Email = 3;
}

message PublicKey {
  PublicKeyAlgorithm PubKeyAlgo = 1;
  uint64 CreationTime = 2;
  bytes PublicKey = 3;
  Identity Identity = 4;
  string Fingerprint = 5;
}

message PrivateKey {
  PublicKey PublicKey = 1;
  bytes Ciphertext = 2;
  bytes Nonce = 3;
  bytes Salt = 4;
}

message Secring {
  uint32 Version = 1;
  repeated PrivateKey PrivateKeys = 2;
}

message Pubring {
  uint32 Version = 1;
  repeated PublicKey PublicKeys = 2;
}
